# xxd-rs

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: build_and_release.yml  clippy.yml  docs.yml  rustfmt.yml  tests.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/xxd/generate/: trait.Render.js
src/: main.rs
src/xxd/: convert.rs  convert.rs.html  dump.rs  dump.rs.html  generate.rs  generate.rs.html  lib.rs  lib.rs.html
tests/: integration_tests.rs
xxd/: all.html  index.html  sidebar-items.js
xxd/convert/: fn.bytes.html  index.html  sidebar-items.js
xxd/dump/: enum.Format.html  fn.dump_iterator.html  index.html  sidebar-items.js  struct.Config.html  struct.OutputLine.html
xxd/generate/: enum.Language.html  index.html  sidebar-items.js  struct.Template.html  trait.Render.html
