[package]
name = "xxd-rs"
version = "0.2.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]

build = "build.rs"
[build-dependencies]
clap = "2.16.2"

[lib]
name = "xxd"
path = "src/xxd/lib.rs"

[[bin]]
name = "xxd-rs"
test = false
doc = false

[dependencies]
nom = "3.0.0"
error-chain = "0.9.0"
term-painter = "0.2.3"
clap = "2.16.2"

